# helix-runtime

./: .env.example  .gitignore  AI Runtime Infrastructure Technical Specification.md  README.md  pyproject.toml
.serena/: project.yml
docs/: agent-context.md  agent-handoff-rules.md  api_interfaces_overview_v_1_openai_compatible_claude_code_code_plan_20260415.md  mcp_claude_code_integration_spec.md  usage-linux-mac.md  usage-windows.md
docs/plans/: PLAN-REQ-20260415-helix-runtime-core-v1.md  PLAN-REQ-20260415-helix-runtime-core-v2.md
docs/progress/: PROGRESS-REQ-20260415-helix-runtime-core.md
docs/requirements/: REQ-20260415-helix-runtime-core.md
helix/: __main__.py  cli.py  config.py  main.py
helix/api/: chat.py  config.py  sessions.py  workflows.py
helix/core/: __init__.py  capability_trigger.py  context_manager.py  state_engine.py  workflow_runtime.py
helix/mcp/: __init__.py  functions.py  handlers.py  server.py  skills.py  stdio_server.py
helix/models/: __init__.py  message.py  session.py  state.py  trigger.py
helix/providers/: __init__.py  base.py  deepseek.py  minimax.py  ollama.py  registry.py  volcengine.py
helix/storage/: __init__.py  memory.py  sqlite.py
helix/templates/: index.html
helix/tests/: test_integration.py
